--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Historia y Fundamentos de HTML - Menú Principal</title>
+  <title>Escuela de Desarrollo - CCL</title>
   <link rel="shortcut icon" href="images/school.png" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
