--- a/bootstrap/bootstrap-vs-tailwind.html
+++ b/bootstrap/bootstrap-vs-tailwind.html
@@ -52,12 +52,17 @@
 
 <body class="min-h-screen py-8">
 
-    <!-- Navigation -->
-    <div class="max-w-6xl mx-auto px-4 mb-8">
-        <a href="../index.html" class="inline-flex items-center text-blue-100 hover:text-white transition-colors">
-            ← Volver al inicio
-        </a>
+  <!-- Navigation -->
+  <nav class="mb-4">
+    <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
+      <a href="../bootstrap/que-es-framework.html" class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+        ←  ¿Qué es un Framework?
+      </a>
+      <a href="../bootstrap/bootstrap-cdn.html" class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+         Integrar Bootstrap →
+      </a>
     </div>
+  </nav>
 
     <!-- Header -->
     <header class="text-center mb-12 fade-in-up">
@@ -247,7 +252,8 @@
   &lt;/div&gt;
   &lt;div class="px-6 py-4"&gt;
     &lt;p class="text-gray-600 mb-4"&gt;Contenido...&lt;/p&gt;
-    &lt;button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"&gt;
+    &lt;button class="bg-blue-500 text-white px-4 py-2 rounded 
+    hover:bg-blue-600"&gt;
       Acción
     &lt;/button&gt;
   &lt;/div&gt;
@@ -335,7 +341,7 @@
 
                     <a href="bootstrap-cdn.html"
                         class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center">
-                        Bootstrap CDN →
+                        Integrar Bootstrap →
                     </a>
                 </div>
             </div>
