--- a/bootstrap/que-es-framework.html
+++ b/bootstrap/que-es-framework.html
@@ -36,8 +36,8 @@
   <!-- Navigation -->
   <nav class="mb-8">
     <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
-      <a href="../css/versiones-css.html" class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
-        ← Versiones CSS
+      <a href="../css/selectores-css.html" class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+        ← Selectores CSS
       </a>
       <h1 class="text-2xl font-bold text-white">🛠️ Frameworks de Estilos</h1>
       <a href="bootstrap-vs-tailwind.html" class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
@@ -238,9 +238,9 @@
     <div class="max-w-6xl mx-auto px-4">
       <div class="bg-white rounded-xl shadow-xl p-6">
         <div class="flex justify-between items-center">
-          <a href="../css/versiones-css.html"
+          <a href="../css/selectores-css.html"
             class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center">
-            ← Versiones CSS
+            ← Selectores CSS
           </a>
 
           <a href="../index.html" class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors">
