--- a/tailwind/clases-tailwind.html
+++ b/tailwind/clases-tailwind.html
@@ -38,11 +38,16 @@
 <body class="min-h-screen py-8">
   
   <!-- Navigation -->
-  <div class="max-w-6xl mx-auto px-4 mb-8">
-    <a href="../index.html" class="inline-flex items-center text-blue-100 hover:text-white transition-colors">
-      ← Volver al inicio
-    </a>
-  </div>
+  <nav class="mb-4">
+    <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
+      <a href="tailwind-cdn.html" class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+        ← Tailwind CDN
+      </a>
+      <a href="ejercicio-tailwind.html" class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+        Ejercicio Tailwind →
+      </a>
+    </div>
+  </nav>
 
   <!-- Header -->
   <header class="text-center mb-12 fade-in-up">
