--- a/bootstrap/bootstrap-cdn.html
+++ b/bootstrap/bootstrap-cdn.html
@@ -56,11 +56,18 @@
 <body class="min-h-screen py-8">
 
     <!-- Navigation -->
-    <div class="max-w-6xl mx-auto px-4 mb-8">
-        <a href="../index.html" class="inline-flex items-center text-blue-100 hover:text-white transition-colors">
-            ← Volver al inicio
-        </a>
-    </div>
+    <nav class="mb-4">
+        <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
+            <a href="../bootstrap/bootstrap-vs-tailwind.html"
+                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+                ← Bootstrap vs Tailwind
+            </a>
+            <a href="../bootstrap/clases-bootstrap.html"
+                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+                Clases Bootstrap →
+            </a>
+        </div>
+    </nav>
 
     <!-- Header -->
     <header class="text-center mb-12 fade-in-up">
