--- a/bootstrap/clases-bootstrap.html
+++ b/bootstrap/clases-bootstrap.html
@@ -34,12 +34,19 @@
 </head>
 <body class="min-h-screen py-8">
   
-  <!-- Navigation -->
-  <div class="max-w-6xl mx-auto px-4 mb-8">
-    <a href="../index.html" class="inline-flex items-center text-blue-100 hover:text-white transition-colors">
-      ← Volver al inicio
-    </a>
-  </div>
+    <!-- Navigation -->
+    <nav class="mb-4">
+        <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
+            <a href="bootstrap-cdn.html"
+                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+                ← Integrar Bootstrap
+            </a>
+            <a href="ejercicio-bootstrap.html"
+                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+                 Ejercicio Bootstrap →
+            </a>
+        </div>
+    </nav>
 
   <!-- Header -->
   <header class="text-center mb-12 fade-in-up">
