--- a/css/selectores-css.html
+++ b/css/selectores-css.html
@@ -74,9 +74,9 @@
         ← Formas de Aplicar CSS
       </a>
       <h1 class="text-2xl font-bold text-white">🎯 Selectores CSS</h1>
-      <div class="bg-white text-lime-600 px-4 py-2 rounded-lg opacity-50">
-        (Último tema) →
-      </div>
+      <a href="../bootstrap/que-es-framework.html" class="bg-white text-lime-600 px-4 py-2 rounded-lg hover:bg-lime-50 transition-colors">
+        Qué es un framework →
+      </a>
     </div>
   </nav>
 
@@ -730,9 +730,9 @@ p { line-height: 1.6; }
             🏠 Menú Principal
           </a>
 
-          <div class="bg-gray-300 text-gray-500 px-6 py-3 rounded-lg opacity-50">
-            (Último tema) →
-          </div>
+          <a href="../bootstrap/que-es-framework.html" class="bg-lime-500 text-white px-6 py-3 rounded-lg hover:bg-lime-600 transition-colors flex items-center">
+            ¿Qué es un framework? →
+          </a>
         </div>
       </div>
     </div>
