--- a/bootstrap/bootstrap-cdn.html
+++ b/bootstrap/bootstrap-cdn.html
@@ -70,14 +70,12 @@
     </nav>
 
     <!-- Header -->
-    <header class="text-center mb-12 fade-in-up">
-        <h1 class="text-5xl font-bold text-white mb-4">
-            🅱️ Integrar Bootstrap con CDN
-        </h1>
-        <p class="text-xl text-blue-100 max-w-3xl mx-auto px-4">
-            La forma más rápida de empezar con Bootstrap
-        </p>
-    </header>
+    <div class="flex justify-center">
+        <div class="max-w-4xl mx-auto px-4 bg-white rounded-2xl shadow-2xl p-8 m-10 text-center fade-in-up w-full">
+            <h1 class="text-4xl font-bold text-gray-800 mb-4">🅱️ Integrar Bootstrap con CDN</h1>
+            <p class="text-xl text-gray-600"> La forma más rápida de empezar con Bootstrap</p>
+        </div>
+    </div>
 
     <!-- Content -->
     <div class="max-w-4xl mx-auto px-4">
