--- a/tailwind/clases-tailwind.html
+++ b/tailwind/clases-tailwind.html
@@ -50,14 +50,12 @@
   </nav>
 
   <!-- Header -->
-  <header class="text-center mb-12 fade-in-up">
-    <h1 class="text-5xl font-bold text-white mb-4">
-      🌊 Clases Tailwind CSS Básicas
-    </h1>
-    <p class="text-xl text-blue-100 max-w-3xl mx-auto px-4">
-      Las utilidades esenciales para construir cualquier diseño
-    </p>
-  </header>
+  <div class="flex justify-center">
+    <div class="max-w-6xl w-full bg-white rounded-2xl shadow-2xl p-8 m-10 text-center fade-in-up">
+      <h1 class="text-4xl font-bold text-gray-800 mb-4">🌊 Clases Tailwind CSS Básicas</h1>
+      <p class="text-xl text-gray-600">Las utilidades esenciales para construir cualquier diseño</p>
+    </div>
+  </div>
 
   <!-- Content -->
   <div class="max-w-6xl mx-auto px-4">
