--- a/html/porque-html.html
+++ b/html/porque-html.html
@@ -54,7 +54,6 @@
       <a href="origen-html.html" class="bg-white text-blue-600 px-4 py-2 rounded-lg hover:bg-blue-50 transition-colors">
         ← Origen del HTML
       </a>
-      <h1 class="text-2xl font-bold text-white">💡 ¿Por qué HTML?</h1>
       <a href="web-html.html" class="bg-white text-blue-600 px-4 py-2 rounded-lg hover:bg-blue-50 transition-colors">
         Web y HTML →
       </a>
@@ -65,7 +64,7 @@
 
     <!-- Header -->
     <div class="bg-white rounded-2xl shadow-2xl p-8 mb-8 text-center slide-in">
-      <h1 class="text-4xl font-bold text-gray-800 mb-4">La Necesidad del HyperText</h1>
+      <h1 class="text-4xl font-bold text-gray-800 mb-4">💡 La Necesidad del HyperText</h1>
       <p class="text-xl text-gray-600">Por qué surgió HTML y quién lo creó</p>
     </div>
 
