--- a/bootstrap/clases-bootstrap.html
+++ b/bootstrap/clases-bootstrap.html
@@ -13,6 +13,30 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
 
+        @keyframes bounceIn {
+            0% {
+                transform: scale(0.3);
+                opacity: 0;
+            }
+
+            50% {
+                transform: scale(1.05);
+            }
+
+            70% {
+                transform: scale(0.9);
+            }
+
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+
+        .bounce-in {
+            animation: bounceIn 0.8s ease-out forwards;
+        }
+
         @keyframes fadeInUp {
             from {
                 opacity: 0;
@@ -56,7 +80,7 @@
 
     <!-- Header -->
     <div class="flex justify-center">
-        <div class="max-w-6xl bg-white rounded-2xl shadow-2xl p-8 m-10 text-center fade-in-up w-full">
+        <div class="max-w-6xl w-full bg-white rounded-2xl shadow-2xl p-8 m-10 text-center bounce-in">
             <h1 class="text-4xl font-bold text-gray-800 mb-4">🅱️ Clases Bootstrap Básicas</h1>
             <p class="text-xl text-gray-600">Las clases esenciales que todo desarrollador debe conocer</p>
         </div>
