--- a/css/que-es-css.html
+++ b/css/que-es-css.html
@@ -12,6 +12,22 @@
       background: linear-gradient(135deg, #06b6d4 0%, #0891b2 100%);
     }
 
+    @keyframes slideIn {
+      from {
+        transform: translateX(-100%);
+        opacity: 0;
+      }
+
+      to {
+        transform: translateX(0);
+        opacity: 1;
+      }
+    }
+
+    .slide-in {
+      animation: slideIn 0.8s ease-out forwards;
+    }
+
     @keyframes typewriter {
       from {
         width: 0
@@ -53,10 +69,10 @@
   <!-- Navigation -->
   <nav class="mb-8">
     <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
-      <a href="../html/hola-mundo.html" class="bg-white text-cyan-600 px-4 py-2 rounded-lg hover:bg-cyan-50 transition-colors">
+      <a href="../html/hola-mundo.html"
+        class="bg-white text-cyan-600 px-4 py-2 rounded-lg hover:bg-cyan-50 transition-colors">
         ← Tu Primer HTML
       </a>
-      <h1 class="text-2xl font-bold text-white">🎨 ¿Qué es CSS?</h1>
       <a href="historia-css.html"
         class="bg-white text-cyan-600 px-4 py-2 rounded-lg hover:bg-cyan-50 transition-colors">
         Historia del CSS →
@@ -67,8 +83,8 @@
   <div class="max-w-4xl mx-auto px-4">
 
     <!-- Header -->
-    <div class="bg-white rounded-2xl shadow-2xl p-8 mb-8 fade-in-up">
-      <h1 class="text-4xl font-bold text-gray-800 mb-4 pb-1 typewriter">Cascading Style Sheets</h1>
+    <div class="bg-white rounded-2xl shadow-2xl p-8 mb-8 slide-in">
+      <h1 class="text-4xl font-bold text-gray-800 mb-4 pb-1">🎨Cascading Style Sheets</h1>
       <p class="text-xl text-gray-600">El lenguaje que da vida y estilo a nuestras páginas web</p>
     </div>
 
@@ -267,7 +283,8 @@ button {
             ← Tu Primer HTML
           </a>
 
-          <a href="../index.html" class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors">
+          <a href="../index.html"
+            class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors">
             🏠 Menú Principal
           </a>
 
