--- a/css/selectores-css.html
+++ b/css/selectores-css.html
@@ -73,7 +73,6 @@
         class="bg-white text-lime-600 px-4 py-2 rounded-lg hover:bg-lime-50 transition-colors">
         ← Formas de Aplicar CSS
       </a>
-      <h1 class="text-2xl font-bold text-white">🎯 Selectores CSS</h1>
       <a href="../bootstrap/que-es-framework.html" class="bg-white text-lime-600 px-4 py-2 rounded-lg hover:bg-lime-50 transition-colors">
         Qué es un framework →
       </a>
@@ -84,7 +83,7 @@
 
     <!-- Header -->
     <div class="bg-white rounded-2xl shadow-2xl p-8 mb-8 fade-in-up">
-      <h1 class="text-4xl font-bold text-gray-800 mb-4 typewriter">Selectores CSS</h1>
+      <h1 class="text-4xl font-bold text-gray-800 mb-4">Selectores CSS</h1>
       <p class="text-xl text-gray-600">Elemento, clase, ID y selectores combinados</p>
     </div>
 
