--- a/html/origen-html.html
+++ b/html/origen-html.html
@@ -38,7 +38,6 @@
   <nav class="mb-8">
     <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
       <div class="text-red-600 px-4 py-2 rounded-lg opacity-50"></div>
-      <h1 class="text-2xl font-bold text-white">🌟 Origen del HTML</h1>
       <a href="porque-html.html" class="bg-white text-red-600 px-4 py-2 rounded-lg hover:bg-red-50 transition-colors">
         ¿Por qué HTML? →
       </a>
@@ -49,7 +48,7 @@
 
     <!-- Header -->
     <div class="bg-white rounded-2xl shadow-2xl p-8 mb-8">
-      <h1 class="text-4xl font-bold text-gray-800 mb-4 typewriter">Los Inicios de HTML</h1>
+      <h1 class="text-4xl font-bold text-gray-800 mb-4 typewriter">🌟Los Inicios de HTML</h1>
       <p class="text-xl text-gray-600">Un viaje desde SGML hasta la revolución del HyperText</p>
     </div>
 
