--- a/css/formas-aplicar-css.html
+++ b/css/formas-aplicar-css.html
@@ -52,7 +52,6 @@
       <a href="sintaxis-css.html" class="bg-white text-amber-600 px-4 py-2 rounded-lg hover:bg-amber-50 transition-colors">
         ← Sintaxis CSS
       </a>
-      <h1 class="text-2xl font-bold text-white">📝 Formas de Aplicar CSS</h1>
       <a href="selectores-css.html" class="bg-white text-amber-600 px-4 py-2 rounded-lg hover:bg-amber-50 transition-colors">
         Selectores CSS →
       </a>
@@ -63,7 +62,7 @@
     
     <!-- Header -->
     <div class="bg-white rounded-2xl shadow-2xl p-8 mb-8 fade-in-up">
-      <h1 class="text-4xl font-bold text-gray-800 mb-4 typewriter">3 Formas de Aplicar CSS</h1>
+      <h1 class="text-4xl font-bold text-gray-800 mb-4 typewriter">📝 3 Formas de Aplicar CSS</h1>
       <p class="text-xl text-gray-600">En línea, interno y externo - elige la mejor opción</p>
     </div>
 
