--- a/css/sintaxis-css.html
+++ b/css/sintaxis-css.html
@@ -51,7 +51,6 @@
       <a href="versiones-css.html" class="bg-white text-rose-600 px-4 py-2 rounded-lg hover:bg-rose-50 transition-colors">
         ← Versiones de CSS
       </a>
-      <h1 class="text-2xl font-bold text-white">⚡ Sintaxis CSS</h1>
       <a href="formas-aplicar-css.html" class="bg-white text-rose-600 px-4 py-2 rounded-lg hover:bg-rose-50 transition-colors">
         Formas de Aplicar CSS →
       </a>
@@ -62,7 +61,7 @@
     
     <!-- Header -->
     <div class="bg-white rounded-2xl shadow-2xl p-8 mb-8 fade-in-up">
-      <h1 class="text-4xl font-bold text-gray-800 mb-4 typewriter">Anatomía de CSS</h1>
+      <h1 class="text-4xl font-bold text-gray-800 mb-4 typewriter">⚡ Anatomía de CSS</h1>
       <p class="text-xl text-gray-600">Reglas, selectores, propiedades y valores</p>
     </div>
 
