--- a/css/versiones-css.html
+++ b/css/versiones-css.html
@@ -73,7 +73,6 @@
         class="bg-white text-emerald-600 px-4 py-2 rounded-lg hover:bg-emerald-50 transition-colors">
         ← Historia del CSS
       </a>
-      <h1 class="text-2xl font-bold text-white">📈 Versiones de CSS</h1>
       <a href="sintaxis-css.html"
         class="bg-white text-emerald-600 px-4 py-2 rounded-lg hover:bg-emerald-50 transition-colors">
         Sintaxis CSS →
@@ -85,7 +84,7 @@
 
     <!-- Header -->
     <div class="bg-white rounded-2xl shadow-2xl p-8 mb-8 fade-in-up">
-      <h1 class="text-4xl font-bold text-gray-800 mb-4 typewriter">Evolución de CSS</h1>
+      <h1 class="text-4xl font-bold text-gray-800 mb-4 typewriter">📈 Evolución de CSS</h1>
       <p class="text-xl text-gray-600">De CSS1 a CSS3 y el futuro modular del diseño web</p>
     </div>
 
