--- a/html/hola-mundo.html
+++ b/html/hola-mundo.html
@@ -54,7 +54,6 @@
       <a href="organismos-html.html" class="bg-white text-pink-600 px-4 py-2 rounded-lg hover:bg-pink-50 transition-colors">
         ← W3C y WHATWG
       </a>
-      <h1 class="text-2xl font-bold text-white">👋 Tu Primer HTML</h1>
       <a href="../css/que-es-css.html" class="bg-white text-pink-600 px-4 py-2 rounded-lg hover:bg-pink-50 transition-colors">
         ¿Qué es CSS? →
       </a>
@@ -65,7 +64,7 @@
     
     <!-- Header -->
     <div class="bg-white rounded-2xl shadow-2xl p-8 mb-8 text-center">
-      <h1 class="text-4xl font-bold text-gray-800 mb-4 typewriter">¡Tu Primer "Hola Mundo" en HTML!</h1>
+      <h1 class="text-4xl font-bold text-gray-800 mb-4 typewriter">👋 ¡Tu Primer "Hola Mundo" en HTML!</h1>
       <p class="text-xl text-gray-600">Aprende a crear tu primera página web paso a paso</p>
     </div>
 
