--- a/html/lenguaje-marcado.html
+++ b/html/lenguaje-marcado.html
@@ -43,7 +43,6 @@
       <a href="web-html.html" class="bg-white text-green-600 px-4 py-2 rounded-lg hover:bg-green-50 transition-colors">
         ← web y HTML
       </a>
-      <h1 class="text-2xl font-bold text-white">🏷️ Lenguaje de Marcado</h1>
       <a href="versiones-html.html" class="bg-white text-green-600 px-4 py-2 rounded-lg hover:bg-green-50 transition-colors">
         versiones  →
       </a>
@@ -54,7 +53,7 @@
     
     <!-- Header -->
     <div class="bg-white rounded-2xl shadow-2xl p-8 mb-8 text-center bounce-in">
-      <h1 class="text-4xl font-bold text-gray-800 mb-4">¿Por qué es un <span class="code-highlight">Lenguaje de Marcado</span>?</h1>
+      <h1 class="text-4xl font-bold text-gray-800 mb-4">🏷️ ¿Por qué es un <span class="code-highlight">Lenguaje de Marcado</span>?</h1>
       <p class="text-xl text-gray-600">Y por qué NO es un lenguaje de programación</p>
     </div>
 
