--- a/html/origen-html.html
+++ b/html/origen-html.html
@@ -25,7 +25,7 @@
     .typewriter {
       overflow: hidden;
       border-right: .15em solid orange;
-      white-space: nowrap;
+      /* white-space: nowrap; */
       margin: 0 auto;
       animation: typewriter 3s steps(40, end);
     }
@@ -48,7 +48,9 @@
 
     <!-- Header -->
     <div class="bg-white rounded-2xl shadow-2xl p-8 mb-8">
-      <h1 class="text-4xl font-bold text-gray-800 mb-4 typewriter">🌟Los Inicios de HTML</h1>
+      <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-800 mb-4 typewriter break-words">
+        🌟 Los Inicios de HTML
+      </h1>
       <p class="text-xl text-gray-600">Un viaje desde SGML hasta la revolución del HyperText</p>
     </div>
 
@@ -86,7 +88,8 @@
             </div>
             <div class="bg-gray-100 p-4 rounded-lg">
               <h4 class="font-semibold mb-2">Ejemplo de SGML:</h4>
-              <pre class="text-sm bg-gray-800 text-green-400 p-3 rounded overflow-x-auto">
+<div class="overflow-auto"></div>
+  <pre class="text-sm bg-gray-800 text-green-400 p-3 rounded whitespace-pre-wrap">
 &lt;!DOCTYPE documento [
   &lt;!ELEMENT documento (titulo, contenido)&gt;
   &lt;!ELEMENT titulo (#PCDATA)&gt;
@@ -95,7 +98,9 @@
 &lt;documento&gt;
   &lt;titulo&gt;Mi Documento&lt;/titulo&gt;
   &lt;contenido&gt;Este es el contenido&lt;/contenido&gt;
-&lt;/documento&gt;</pre>
+&lt;/documento&gt;
+  </pre>
+</div>
 
               <div class="mt-3 bg-red-50 p-2 rounded text-xs text-red-700">
                 <strong>Nota:</strong> Este ejemplo es simple, pero SGML real era mucho más complejo, con DTDs (Document
@@ -238,7 +243,8 @@
             ← (Primer tema)
           </div>
 
-          <a href="../index.html" class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors">
+          <a href="../index.html"
+            class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors">
             🏠 Menú Principal
           </a>
 
