--- a/html/origen-html.html
+++ b/html/origen-html.html
@@ -88,7 +88,7 @@
             </div>
             <div class="bg-gray-100 p-4 rounded-lg">
               <h4 class="font-semibold mb-2">Ejemplo de SGML:</h4>
-<div class="overflow-auto"></div>
+<div class="overflow-auto">
   <pre class="text-sm bg-gray-800 text-green-400 p-3 rounded whitespace-pre-wrap">
 &lt;!DOCTYPE documento [
   &lt;!ELEMENT documento (titulo, contenido)&gt;
