--- a/html/origen-html.html
+++ b/html/origen-html.html
@@ -88,8 +88,8 @@
             </div>
             <div class="bg-gray-100 p-4 rounded-lg">
               <h4 class="font-semibold mb-2">Ejemplo de SGML:</h4>
-<div class="overflow-auto">
-  <pre class="text-sm bg-gray-800 text-green-400 p-3 rounded whitespace-pre-wrap">
+              <div class="overflow-auto">
+                <pre class="text-sm bg-gray-800 text-green-400 p-3 rounded whitespace-pre-wrap">
 &lt;!DOCTYPE documento [
   &lt;!ELEMENT documento (titulo, contenido)&gt;
   &lt;!ELEMENT titulo (#PCDATA)&gt;
@@ -100,8 +100,7 @@
   &lt;contenido&gt;Este es el contenido&lt;/contenido&gt;
 &lt;/documento&gt;
   </pre>
-</div>
-
+              </div>
               <div class="mt-3 bg-red-50 p-2 rounded text-xs text-red-700">
                 <strong>Nota:</strong> Este ejemplo es simple, pero SGML real era mucho más complejo, con DTDs (Document
                 Type Definitions) de cientos de líneas.
@@ -238,18 +237,18 @@
   <footer class="mt-16">
     <div class="max-w-6xl mx-auto px-4">
       <div class="bg-white rounded-xl shadow-xl p-6">
-        <div class="flex justify-between items-center">
-          <div class="bg-gray-300 text-gray-500 px-6 py-3 rounded-lg opacity-50">
+        <div class="flex flex-col sm:flex-row justify-between items-stretch sm:items-center gap-4">
+          <div class="bg-gray-300 text-gray-500 px-6 py-3 rounded-lg opacity-50 flex-1 text-center">
             ← (Primer tema)
           </div>
 
           <a href="../index.html"
-            class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors">
+            class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors flex-1 text-center">
             🏠 Menú Principal
           </a>
 
           <a href="porque-html.html"
-            class="bg-red-500 text-white px-6 py-3 rounded-lg hover:bg-red-600 transition-colors flex items-center">
+            class="bg-red-500 text-white px-6 py-3 rounded-lg hover:bg-red-600 transition-colors flex items-center justify-center flex-1 text-center">
             ¿Por qué HTML? →
           </a>
         </div>
