--- a/html/lenguaje-marcado.html
+++ b/html/lenguaje-marcado.html
@@ -327,7 +327,7 @@
   </div>
 
   <!-- Jerarquía de Etiquetas -->
-  <div class="bg-white rounded-xl shadow-xl overflow-hidden mb-8">
+  <div class="bg-white rounded-xl shadow-xl overflow-hidden m-3">
     <div class="bg-gradient-to-r from-indigo-500 to-indigo-600 p-6 text-white">
       <h2 class="text-3xl font-bold">🌳 Jerarquía de Etiquetas</h2>
     </div>
