--- a/css/historia-css.html
+++ b/css/historia-css.html
@@ -68,13 +68,13 @@
 
   <!-- Navigation -->
   <nav class="mb-8">
-    <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
+    <div class="max-w-6xl mx-auto px-4 flex flex-col gap-3 sm:flex-row sm:justify-between sm:items-center">
       <a href="que-es-css.html"
-        class="bg-white text-violet-600 px-4 py-2 rounded-lg hover:bg-violet-50 transition-colors">
+        class="bg-white text-violet-600 px-4 py-2 rounded-lg hover:bg-violet-50 transition-colors w-full sm:w-auto text-center">
         ← ¿Qué es CSS?
       </a>
       <a href="versiones-css.html"
-        class="bg-white text-violet-600 px-4 py-2 rounded-lg hover:bg-violet-50 transition-colors">
+        class="bg-white text-violet-600 px-4 py-2 rounded-lg hover:bg-violet-50 transition-colors w-full sm:w-auto text-center">
         Versiones de CSS →
       </a>
     </div>
@@ -363,22 +363,22 @@ P {
   <footer class="mt-16">
     <div class="max-w-6xl mx-auto px-4">
       <div class="bg-white rounded-xl shadow-xl p-6">
-        <div class="flex justify-between items-center">
-          <a href="que-es-css.html"
-            class="bg-violet-500 text-white px-6 py-3 rounded-lg hover:bg-violet-600 transition-colors flex items-center">
-            ← Tema Anterior
-          </a>
+      <div class="flex flex-col gap-3 sm:flex-row sm:justify-between sm:items-center">
+        <a href="que-es-css.html"
+        class="bg-violet-500 text-white px-6 py-3 rounded-lg hover:bg-violet-600 transition-colors flex items-center justify-center">
+        ← Tema Anterior
+        </a>
 
-          <a href="../index.html"
-            class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors">
-            🏠 Menú Principal
-          </a>
+        <a href="../index.html"
+        class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors flex items-center justify-center">
+        🏠 Menú Principal
+        </a>
 
-          <a href="versiones-css.html"
-            class="bg-violet-500 text-white px-6 py-3 rounded-lg hover:bg-violet-600 transition-colors flex items-center">
-            Siguiente Tema →
-          </a>
-        </div>
+        <a href="versiones-css.html"
+        class="bg-violet-500 text-white px-6 py-3 rounded-lg hover:bg-violet-600 transition-colors flex items-center justify-center">
+        Siguiente Tema →
+        </a>
+      </div>
       </div>
     </div>
 
